--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">PlatziWallet</string>
     <string name="title_home">Inicio</string>
-    <string name="title_loans">Créditos</string>
-    <string name="title_profile">Perfil</string>
+    <string name="title_loans">Transferir</string>
+    <string name="title_profile">Créditos</string>
 </resources>
